--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web_Design</title>
+    
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="">
     <div class="container">
         <nav class="navbar">
             <ul>
@@ -22,8 +23,8 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae in praesentium ipsum nostrum alias est reprehenderit amet nisi enim officia.</p>
             </section>
             <section class="cta">
-                <div class="btn">
-                    <button>Get Started</button>
+                <div>
+                    <button class="btn">Get Started</button>
                 </div>
             </section>
             <section class="about-services">
