--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web_Design</title>
-    
+    <link rel="shortcut icon" href="web_icons/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <script type="text/javascript" src="script.js" defer></script>
 </head>
